gnome-shell (3.18.4-1) UNRELEASED; urgency=medium

  * new upstream release.

 -- Michael Biebl <biebl@debian.org>  Fri, 04 Mar 2016 09:09:37 +0100

gnome-shell (3.18.3-3) unstable; urgency=medium

  * Fix double-unref in get_secrets_keyring_cb(). This fixes a crash in
    NetworkAgent when trying to acquire secrets from gnome-keyring, like VPN
    passwords. Patch cherry-picked from upstream Git.

 -- Michael Biebl <biebl@debian.org>  Sun, 31 Jan 2016 16:03:28 +0100

gnome-shell (3.18.3-2) unstable; urgency=medium

  * Update the dependency on gir1.2-gdm3 to gir1.2-gdm-1.0 for the changes in
    gdm3 3.18.2-1.

 -- Michael Biebl <biebl@debian.org>  Thu, 19 Nov 2015 13:01:16 +0100

gnome-shell (3.18.3-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Wed, 18 Nov 2015 01:34:05 +0100

gnome-shell (3.18.2-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Fri, 13 Nov 2015 00:18:12 +0100

gnome-shell (3.18.1-1) unstable; urgency=medium

  * New upstream release.
  * Bump dependency on mutter to (>= 3.18.1) as per configure.ac.
  * Bump dependency on evolution-data-server to (>= 3.17.2).

 -- Michael Biebl <biebl@debian.org>  Wed, 21 Oct 2015 19:07:41 +0200

gnome-shell (3.18.0-1) unstable; urgency=medium

  [ Andreas Henriksson ]
  * Fix typo in previous changelog entry.
  * gnome-shell: Recommend iio-sensor-proxy
    - nowadays js calls net.hadess.SensorProxy DBus interface.
  * New upstream release.

  [ Laurent Bigonville ]
  * Drop d/p/10_background_race.patch: Merged upstream

 -- Laurent Bigonville <bigon@debian.org>  Sun, 11 Oct 2015 16:02:22 +0200

gnome-shell (3.17.92-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Change gnome-themes-standard dependency to gnome-themes-standard-data
    recommendation, to avoid pulling in Gtk+ 2 library.

  [ Andreas Henriksson ]
  * New upstream release candidate.
  * Update build-dependencies according to configure.ac changes: